--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1427,6 +1427,7 @@ figure {
 }
 
 img {
+    width: 100%;
     vertical-align: middle
 }
 
@@ -1622,6 +1623,7 @@ h6 {
 }
 
 p {
+    padding: 15px;
     margin: 0 0 10px
 }
 
@@ -1857,10 +1859,9 @@ abbr[title] {
 }
 
 blockquote {
-    padding: 10px 20px;
-    margin: 0 0 20px;
-    font-size: 17.5px;
-    border-left: 5px solid #eee
+    padding: 10px 0px;
+    margin: 0px;
+    font-size: 18px;
 }
 
 blockquote ol:last-child,
@@ -2011,8 +2012,9 @@ pre code {
 }
 
 .row {
-    margin-right: -15px;
-    margin-left: -15px
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto
 }
 
 .col-lg-1,
@@ -7682,7 +7684,7 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
+    background-color: #000;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
@@ -7794,9 +7796,11 @@ button.close {
 
 .center-block {
     display: block;
+    width: 15%;
     margin-right: auto;
     margin-left: auto
 }
+
 
 .pull-right {
     float: right !important
