--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1413,7 +1413,7 @@ a {
 a:focus,
 a:hover {
     color: #23527c;
-    text-decoration: underline
+    /*text-decoration: underline*/
 }
 
 a:focus {
